[package]
name = "ModSync"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
parking_lot = "0.12.5"
image = "0.25.9"